--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             </div>
         </div> 
     </div>
-    <footer class="container">
-        <div class="footer-menu">
+    <footer>
+        <div class="container footer-menu">
             <ul>
                 <li class="copyright">SPACEX &copy; 2021</li>
                 <li><a href="#">TWITTER</a></li>
